--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -20,13 +20,14 @@ html lang="en"
   body
     .navbar.navbar-default.navbar-fixed-top
       .container
-        button.navbar-toggle type="button" data-toggle="collapse" data-target=".navbar-responsive-collapse"
-
-          span.icon-bar
-        = link_to 'Deer', root_path, class:'navbar-brand'
         .row
-          .col-lg-4.col-lg-offset-4
+          .col-lg-2
+            = link_to 'Deer', root_path, class: 'navbar-brand'
+          .col-lg-4
             = paginate @commits if controller_name == 'commits'
+          .col-lg-4
+            .row.search_container
+              == render 'searches/form'
 
 
     .container
