midle commit between acceptance test

--- a/app/views/users/_edit_form.html.slim
+++ b/app/views/users/_edit_form.html.slim
@@ -2,5 +2,5 @@
   .col-lg-1
     = form_for user, remote: true, html: {style: "display: none", class: "edit_form_#{user_seq_id} edit_form_#{user.id}"} do |f|
       = f.text_field :name, type: "text", class: "edit_field_#{user.id} input-medium search-query"
-      = f.submit "Apply", class: 'btn btn-mini btn-info'
+      = f.submit "Apply", class: 'btn btn-mini btn-info edit_btn'
 
