--- a/app/views/commits/index.html.slim
+++ b/app/views/commits/index.html.slim
@@ -1,14 +1,1 @@
-table.table.table-hover
-  thead
-    tr
-      td
-        |Date:
-      td
-        |Name:
-      td
-        |Sha:
-      td
-        |Message:
-  tbody
-    - @commits.each do |commit|
-      == render commit
+== render 'common/commits'
