--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -23,6 +23,7 @@ html lang="en"
         .row
           .col-lg-3
             = link_to 'Deer', root_path, class: 'navbar-brand'
+
           - if controller_name == 'commits'
             .col-lg-4
               .row
@@ -30,6 +31,7 @@ html lang="en"
             .col-lg-4
               .row.search_container
                 == render 'searches/form'
+          .row.errors
 
 
     .container
