--- a/app/views/common/_errors.html.slim
+++ b/app/views/common/_errors.html.slim
@@ -1,4 +1,4 @@
-.col-lg-12.col-md-12.col-sm-12.alert.alert-danger.errors
+.col-lg-12.col-md-12.col-sm-12.col-xs-12-1alert.alert-danger.errors
 
   - resource.errors.full_messages.each do |message|
     = message
