--- a/app/views/commits/_commit.html.slim
+++ b/app/views/commits/_commit.html.slim
@@ -1,7 +1,7 @@
 tr
-  td.col-lg-1
+  td.col-lg-1.col-md-1.col-sm-1.col-xs-1
     = commit.date
-  td.col-lg-2
+  td.col-lg-2.col-md-2.col-sm-2.col-xs-2
     div class="user_name_#{commit.user_id} user_name_#{commit.user_id}_#{commit.user.commits.index(commit)}"
       = commit.user.name
     == render 'users/edit_form', user: commit.user, user_seq_id: "#{commit.user_id}_#{commit.user.commits.index(commit)}"
@@ -10,7 +10,7 @@ tr
               type: 'button', data: {user_sequence_id: "#{commit.user_id}_#{commit.user.commits.index(commit)}"},
               id:"edit_link_#{commit.user_id}_#{commit.user.commits.index(commit)}"
       span.glyphicon.glyphicon-pencil
-  td.col-lg-4
+  td.col-lg-4.col-md-4.col-sm-4.col-xs-4
     = commit.sha
-  td.col-lg-5
+  td.col-lg-5.col-md-5.col-sm-5.col-xs-5
     = commit.message
