--- a/app/views/imports/new.html.slim
+++ b/app/views/imports/new.html.slim
@@ -1,4 +1,3 @@
-
 .container-fluid
   br
   br
@@ -8,7 +7,7 @@
   br
   .border-form-div
     .row
-      .col-lg-5
+      .col-lg-5.col-md-5.col-sm-5.col-xs-5
         h3.text-info
           |Commits
     = form_tag imports_path, method: :post do
