--- a/app/views/users/_edit_form.html.slim
+++ b/app/views/users/_edit_form.html.slim
@@ -1,5 +1,5 @@
 .row
-  .col-lg-1
+  .col-lg-1.col-md-1.col-sm-1.col-xs-1
     = form_for user, remote: true, html: {style: "display: none", class: "edit_form_#{user_seq_id} edit_form_#{user.id}"} do |f|
       = f.text_field :name, type: "text", class: "edit_field_#{user.id} input-medium search-query",  required: "required"
       = f.submit "Apply", class: 'btn btn-mini btn-info edit_btn'
