--- a/app/views/searches/show.html.slim
+++ b/app/views/searches/show.html.slim
@@ -1,2 +1,2 @@
-= button_to '<< back', commits_path, method: :get, class: 'btn btn-info btn_back'
+= button_to '<< back', commits_path, method: :get, class: 'btn btn-warning'
 == render 'common/commits'
