--- a/app/assets/stylesheets/commits.scss
+++ b/app/assets/stylesheets/commits.scss
@@ -1,4 +1,15 @@
 // Place all the styles related to the Commits controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.date{
+   font-size: 0.8em;
+ }
 
+.email{
+  font-size: 0.7em;
+}
+
+
+.bord{
+  border: solid blueviolet 1px;
+}
