--- a/app/views/commits/index.html.slim
+++ b/app/views/commits/index.html.slim
@@ -1,2 +1,3 @@
 = button_to '<< back', root_path, method: :get, class: 'btn btn-success'
-== render 'common/commits'
+
+== render 'common/commits', commits: @commits
