--- a/app/views/commits/_searches_form.html.slim
+++ b/app/views/commits/_searches_form.html.slim
@@ -1,4 +1,4 @@
-= form_tag searches_path, method: :post
+= form_tag commits_path, method: :get
   .row
     .col-lg-8.col-md-8.col-sm-8.col-xs-8
       = email_field_tag :email, '', class: 'form-control', required: "required", placeholder: 'Search by Email'
