--- a/app/views/commits/index.html.slim
+++ b/app/views/commits/index.html.slim
@@ -1,3 +1,3 @@
-= button_to '<< back', root_path, method: :get, class: 'btn btn-success'
+= button_to 'All Commits', commits_path, method: :get, class: 'btn btn-primary'
 
 == render 'common/commits', commits: @commits
