--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -29,7 +29,7 @@ html lang="en"
                 = paginate @commits
             .col-lg-4.col-md-4.col-sm-4.col-xs-4
               .row.search_container
-                == render 'searches/form'
+                == render 'commits/searches_form'
     .container
       br
       br
